removed canvas for now (work in progress)

--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 			</div>
 
 			<div class="col-md-4">
-
-				<canvas width="450" height="225" id="hangman"></canvas>
-
+				<!-- Need to work on canvas for hangman image -->
+				<!-- <canvas width="450" height="225" id="hangman"></canvas> -->
 			</div>
 
 		</div>
