changed <h1> on page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="container">
 		<div class="page-header">
-			<h1>Hangman: Gone Phishin'</h1>
+			<h1>Gone Phishin'</h1>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
